# NativeRenderingPlugin

./: .gitignore  CMakeLists.txt  CMakePresets.json
PluginSource/projects/Android/jni/: Application.mk
PluginSource/projects/VisualStudio2022/: RenderingPlugin.vcxproj
PluginSource/projects/Xcode/RenderingPlugin.xcodeproj/: project.pbxproj
PluginSource/source/: PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_Metal.mm  RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp
UnityProject/Assets/: MetalFXTest.cs  UseRenderingPlugin.cs  scene.unity
UnityProject/Assets/Plugins/RenderingPlugin.bundle/Contents/: Info.plist
UnityProject/Assets/Plugins/RenderingPlugin.bundle/Contents/MacOS/: RenderingPlugin
UnityProject/Assets/RenderPlugin/: RenderingPluginWrapper.cs
UnityProject/Assets/Wrapper/: RenderingPluginWrapper.asmdef
UnityProject/ProjectSettings/: ProjectSettings.asset
projects/Android/jni/: Android.mk
projects/VisualStudio2022/: RenderingPlugin.vcxproj
projects/Xcode/RenderingPlugin.xcodeproj/: project.pbxproj
source/: CMakeLists.txt  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D.cpp  RenderAPI_D3D.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_Metal.mm  RenderStructures.h  RenderingPlugin.cpp  RenderingPlugin.def  SLWrapper.cpp  SLWrapper.h
source/Metal/: AccelerationStructure.h  AccelerationStructure.mm  Raytracing.metal  RenderAPI_Metal.h  RenderAPI_Metal.mm  ShaderDefinition.h
source/Unity/: CMakeLists.txt  IUnityGraphics.h  IUnityGraphicsD3D11.h
source/Windows/: CMakeLists.txt  RenderAPI_D3D.cpp  RenderAPI_D3D.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  SLWrapper.cpp  SLWrapper.h
